# ChronoTrade

./: .clang-tidy  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TEST_COVERAGE.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  matching_engine_benchmark.cpp
config/: engine.yaml
docker/: Dockerfile  Dockerfile.ci
docs/: API.md
include/trading_engine/containers/: lockfree_queue.hpp
include/trading_engine/matching_engine/: order_book.hpp
include/trading_engine/utils/: simd_price_utils.hpp
monitoring/: prometheus.yml
proto/: trading_api.proto
scripts/: build.sh  create_release.sh  run_benchmarks.sh
src/: main.cpp
src/core/: CMakeLists.txt  config_manager.cpp  logger.cpp  performance_monitor.cpp
src/gpu_compute/: CMakeLists.txt  cuda_kernels.cu
src/grpc_api/: CMakeLists.txt
src/market_data/: CMakeLists.txt  feed_handler.cpp
src/matching_engine/: CMakeLists.txt  matching_engine.cpp  order_book.cpp
src/networking/: CMakeLists.txt  udp_receiver.cpp
src/risk_management/: CMakeLists.txt  risk_manager.cpp
tests/: CMakeLists.txt  test_concurrent_orders.cpp  test_order_book.cpp
